@@ -124,7 +124,8 @@ NEW FEATURES
 	internal corruptions, and some badly written contributed code.
 
     o	There are new functions in package 'tcltk', tk_choose.files()
-	and tk_choose.dir(), analogues of functions available on Windows.
+	tk_choose.dir() and tk_messageBox(), analogues of functions
+	available on Windows (the last is an analogue of winDialog).
 
 
 DEPRECATED & DEFUNCT
